# dioxus-simple-kanban-board-example

./: Cargo.toml  Dioxus.toml  README.md  tailwind.config.js
assets/: tailwind.css
src/: components.rs  main.rs
src/components/: kanban.rs
